// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ripple renders the blue ripple 1`] = `
<div
  class="ripple blue"
  style="top:2px;left:4px"
/>
`;

exports[`Ripple renders the container with white ripple 1`] = `
<button>
  button text
  <div
    class="ripple white"
    style="top:2px;left:4px"
  />
</button>
`;

exports[`Ripple renders the container without ripple 1`] = `
<button>
  button text
</button>
`;

exports[`Ripple renders the white ripple 1`] = `
<div
  class="ripple white"
  style="top:2px;left:4px"
/>
`;
